# unicorn

./: CMakeLists.txt  lift.c  uc.c
include/unicorn/: lift.h
qemu/include/: elf.h
qemu/include/tcg/: tcg-op.h
qemu/tcg/: generate-tcg.h  generate-tcg.inc.c  tcg.c
qemu/tcg/aarch64/: tcg-target.h
qemu/util/: crc32c.c  qemu-thread-posix.c
